Fixed spacing in return to login

--- a/thermalComfortApp/src/Pages/ResetPasswordConfirmationPage/ResetPasswordConfirmation.css
+++ b/thermalComfortApp/src/Pages/ResetPasswordConfirmationPage/ResetPasswordConfirmation.css
@@ -34,12 +34,12 @@
     font-size: 50px;
 }
 
-.return-login {
+.confirm-return-login {
     color: #124B35;
     text-decoration: none;
     display: inline-block;
     font-size: 14px;
-    margin: 40px 0 30px 75px
+    margin: 30px 0 30px 75px
 }
 
 .return-login:hover {
